--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
                 <h6 class="m-0">Usability testing</h6>
             </div>
             <div class="box-services">
-                <img src="assets/images/website.png" alt="website" width="200">
+                <img src="assets/images/img-1.png" alt="website" width="200">
                 <h5 class="mb-0">CONCEPT AND IDEAS</h5>
                 <h6 class="m-0">Conceptualization</h6>
                 <h6 class="m-0">Digital Branding</h6>
                 <h6 class="m-0">Product strategy</h6>
             </div>
             <div class="box-services">
-                <img src="assets/images/website.png" alt="website" width="200">
+                <img src="assets/images/lapiz.png" alt="website" width="200">
                 <h5 class="mb-0">DESING AND BRANDING</h5>
                 <h6 class="m-0">Interactive Desing</h6>
                 <h6 class="m-0">Graphic Design</h6>
@@ -119,6 +119,14 @@
         <p>© Copyrigth</p>
     </footer>
     
+    <div id="modal" class="hide">
+        <div class="modalListo">            
+        </div>
+    </div>
+    <!--<div id="box-services-modal" class="hide">
+
+    </div>  -->
+
     <!-- Enlaza tu JS aquí -->
     <script type="text/javascript" src="js/app.js"></script>
 </body>
